tests/snapshots/examples_fixtures/type_system__failing__72_hm_match_known_type_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx:14:32
   |
14 |     print(to_string(expect_int(choose(true))))
   |                                ^^^^^^^^^^^^
   |                                ------------ expected Int, found String
   |                                ------------ argument type is known at compile time

Help:
  argument #1 does not match function contract
== stdout ==
<not executed>
